--- a/demo0-basics/demo001/index.html
+++ b/demo0-basics/demo001/index.html
@@ -10,9 +10,12 @@
 <body>
 <div id="example"></div>
 <script type="text/babel">
-    <!--text/babel-->
     ReactDOM.render(
-        <h1>Hello, world!</h1>,
+        <div>
+            <h1>菜鸟教程</h1>
+            <h2>欢迎学习 React</h2>
+            <p data-myattribute = "somevalue">这是一个很不错的 JavaScript 库!</p>
+        </div>,
         document.getElementById('example')
     );
 </script>
